force-app/main/default/objects/RiverId__c/RiverId__c.object-meta.xml
<CustomObject>
    <label>RiverId</label>
    <nameField>
        <label>RiverId Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RiverIds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>