force-app/main/default/objects/RiverId__c/fields/Avg_Score_Abono_Socio__c.field-meta.xml
<CustomField>
    <fullName>Avg_Score_Abono_Socio__c</fullName>
    <formula>IF( NOT( ISNULL( Number_Responses_Socio__c ) ) ,  Sum_Abonos_Score_Socio__c / Number_Responses_Socio__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Score Abono Socio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>