force-app/main/default/objects/RiverId__c/fields/cat_socio__c.field-meta.xml
<CustomField>
    <fullName>cat_socio__c</fullName>
    <label>Categoría de Socio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>