force-app/main/default/objects/RiverId__c/fields/fecha_socio__c.field-meta.xml
<CustomField>
    <fullName>fecha_socio__c</fullName>
    <label>Fecha de Alta de Socio</label>
    <type>Date</type>
</CustomField>