force-app/main/default/objects/RiverId__c/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <externalId>true</externalId>
    <label>Guid</label>
    <length>32</length>
    <type>Text</type>
</CustomField>