force-app/main/default/objects/RiverId__c/fields/nro_socio__c.field-meta.xml
<CustomField>
    <fullName>nro_socio__c</fullName>
    <label>Numero de Socio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>