force-app/main/default/objects/RiverId__c/fields/Number_Responses_Socio__c.field-meta.xml
<CustomField>
    <fullName>Number_Responses_Socio__c</fullName>
    <label>Number Responses Socio</label>
    <summaryForeignKey>RiverId_Polls__c.RiverId_SFID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>