force-app/main/default/objects/RiverId__c/fields/riverid_citizen__c.field-meta.xml
<CustomField>
    <fullName>riverid_citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RiverIdCitizen</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RiverIds</relationshipLabel>
    <relationshipName>RiverIds</relationshipName>
    <type>Lookup</type>
</CustomField>