force-app/main/default/objects/RiverId__c/fields/Sum_Abonos_Score_Socio__c.field-meta.xml
<CustomField>
    <fullName>Sum_Abonos_Score_Socio__c</fullName>
    <label>Sum Abonos Score Socio</label>
    <summarizedField>RiverId_Polls__c.Abonos__c</summarizedField>
    <summaryForeignKey>RiverId_Polls__c.RiverId_SFID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>