force-app/main/default/objects/RiverId__c/fields/voto_2017__c.field-meta.xml
<CustomField>
    <fullName>voto_2017__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emitio Voto Elecciones 2017</label>
    <type>Checkbox</type>
</CustomField>