force-app/main/default/objects/RiverId__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>riverid_citizen__c</columns>
    <columns>nro_socio__c</columns>
    <columns>voto_2009__c</columns>
    <columns>voto_2013__c</columns>
    <columns>voto_2017__c</columns>
    <columns>voto_2021__c</columns>
    <columns>fecha_socio__c</columns>
    <columns>cat_socio__c</columns>
    <columns>guid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>