force-app/main/default/objects/RiverId__c/listViews/TestJCK.listView-meta.xml
<ListView>
    <fullName>TestJCK</fullName>
    <columns>NAME</columns>
    <columns>guid__c</columns>
    <columns>Number_Responses_Socio__c</columns>
    <columns>Sum_Futbol_Score_Socio__c</columns>
    <columns>Avg_Score_Futbol_Socio__c</columns>
    <columns>Sum_Abonos_Score_Socio__c</columns>
    <columns>Avg_Score_Abono_Socio__c</columns>
    <columns>Sum_Beneficios_Score_Socio__c</columns>
    <columns>Avg_Score_Beneficios_Socio__c</columns>
    <columns>Sum_Estadio_Score_Socio__c</columns>
    <columns>Avg_Score_Estadio_Socio__c</columns>
    <columns>Sum_Instalaciones_Score_Socio__c</columns>
    <columns>Avg_Score_Instalaciones_Socio__c</columns>
    <filterScope>Everything</filterScope>
    <label>TestJCK</label>
    <sharedTo>
        <group>Admins</group>
    </sharedTo>
</ListView>